--- a/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
+++ b/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
@@ -29,7 +29,7 @@ data:
 kp_concat_type: pres_abs
 #### Subword and vocab
 src_subword_model: roberta_tokenize
-src_vocab: /home/ubuntu/hf_vocab/roberta-base-kp
+src_vocab: /home/ubuntu/hf_vocab/roberta-base-kp/vocab.json
 share_vocab: True
 bpe_dropout: 0.0
 #### Sampling
