--- a/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
+++ b/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
@@ -51,13 +51,8 @@ poisson_lambda: 3.0
 replace_length: 1
 
 # Model opts:
-encoder_type: transformer
-decoder_type: transformer
-word_vec_size: 512
-rnn_size: 512
-layers: 6
-heads: 8
-dropout: 0.1
+encoder_type: bart
+decoder_type: bart
 
 share_embeddings: 'true'
 copy_attn: 'true'
