--- a/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
+++ b/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
@@ -51,8 +51,8 @@ poisson_lambda: 3.0
 replace_length: 1
 
 # Model opts:
-encoder_type: bart
-decoder_type: bart
+encoder_type: pretrained
+decoder_type: pretrained
 
 share_embeddings: 'true'
 copy_attn: 'true'
