Edit configs for bart training

--- a/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
+++ b/script/transfer/train_fulldata/kpgen-bart-presabs-kptimes.yml
@@ -51,8 +51,8 @@ poisson_lambda: 3.0
 replace_length: 1
 
 # Model opts:
-encoder_type: pretrained
-decoder_type: pretrained
+encoder_type: fairseq_bart
+decoder_type: fairseq_bart
 
 share_embeddings: 'true'
 copy_attn: 'true'
